--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,3 +15,8 @@ jobs:
           name: Run tests
           command: |
             cargo test
+      - run:
+          name: Run clippy
+          command: |
+            cargo clippy
+
