--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,21 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/poomas
     docker:
-      - image: rust:latest
+      - image: circleci/rust:latest
     steps:
       - checkout
       - setup_remote_docker
       - run:
+          name: Install clippy
+          command: rustup component add clippy-preview
+      - run:
           name: Build
-          command: |
-            cargo build
+          command: cargo build
       - run:
           name: Run tests
-          command: |
-            cargo test
+          command: cargo test
       - run:
           name: Run clippy
-          command: |
-            cargo clippy
+          command: cargo clippy
 
