--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ serde_derive = "1"
 toml = "0.4"
 failure = "0.1"
 reqwest = "0.9.3"
-clap = "2.32"
 log = "0.4"
 env_logger = "0.5"
+structopt = "0.2"
