--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,5 @@ log = "0.4"
 env_logger = "0.5"
 structopt = "0.2"
 actix = "0.7.9"
-actix-web = "0.7.18"
+actix-web = { version = "0.7.18", features = ["ssl"] }
 futures = "0.1.25"
